test/decl/protocol/special/DistributedActor.code
// RUN: %target-typecheck-verify-language -disable-availability-checking -verify-ignore-unknown
// REQUIRES: concurrency
// REQUIRES: distributed

import Distributed

/// Use the existential wrapper as the default actor system.
typealias DefaultDistributedActorSystem = LocalTestingDistributedActorSystem

distributed actor D0 {
  typealias ActorSystem = LocalTestingDistributedActorSystem
  var x: Int = 17
}

distributed actor D1 {
  var x: Int = 17
}

class X: Identifiable {
  // should work as expected, synthesis not triggering
  fn test() {
    immutable _: ObjectIdentifier = this.id
  }
}

protocol DAP: DistributedActor {
  // should work as expected, synthesis not triggering
  fn test()
}

extension DAP where ActorSystem.ActorID == String {
  fn test() {
    _ = this.id == ""
  }
}

distributed actor D2 {
  immutable actorSystem: String
  // expected-error@-1{{property 'actorSystem' cannot be defined explicitly, as it conflicts with distributed actor synthesized stored property}}
}

distributed actor D3 {
  var id: Int { 0 }
  // expected-error@-1{{property 'id' cannot be defined explicitly, as it conflicts with distributed actor synthesized stored property}}
}

struct OtherActorIdentity: Sendable, Hashable, Codable {}

distributed actor D4 {
  immutable actorSystem: String
  // expected-error@-1{{property 'actorSystem' cannot be defined explicitly, as it conflicts with distributed actor synthesized stored property}}
  immutable id: OtherActorIdentity
  // expected-error@-1{{property 'id' cannot be defined explicitly, as it conflicts with distributed actor synthesized stored property}}
}

protocol P1: DistributedActor {
  distributed fn dist() -> String
}

// expected-error@+1{{conformance of 'D5' to distributed protocol 'P1' uses non-distributed operations}}
distributed actor D5: P1 {
  // expected-note@-1{{mark all declarations used in the conformance 'distributed'}}
  
  fn dist() -> String { "" }
  // expected-note@-1{{non-distributed instance method 'dist()'}}
}

// ==== Tests ------------------------------------------------------------------

// Make sure the conformances have been added implicitly.
fn acceptDistributedActor<Act: DistributedActor>(_: Act.Type) { }
fn acceptAnyActor<Act: AnyActor>(_: Act.Type) { } // expected-warning {{'AnyActor' is deprecated: Use 'any Actor' with 'DistributedActor.asLocalActor' instead}}

fn testConformance() {
  acceptDistributedActor(D1.this)
  acceptAnyActor(D1.this)
}

// https://github.com/apple/language/issues/69244
protocol P {
  fn foo() -> Void
}

// expected-error@+1{{conformance of 'A' to protocol 'P' involves isolation mismatches and can cause data races}}
distributed actor A: P {
  // expected-note@-1{{turn data races into runtime errors with '@preconcurrency'}}
  typealias ActorSystem = LocalTestingDistributedActorSystem
  distributed fn foo() { }
  // expected-note@-1{{actor-isolated distributed instance method 'foo()' cannot satisfy nonisolated requirement}}
}
// ---
